Fix some overflow issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@ body {
     height: 100vh;
     width: 100vw;
     background-color: #fff4e1;
+    overflow-x: hidden;
 }
 
 .centerbox {
